automatically activate the right conda environment

--- a/.envrc
+++ b/.envrc
@@ -50,3 +50,7 @@ export DIR_SRC_UTILS=$(pwd)/src/utils
 
 # Add environment variables for the `tests` directory
 export DIR_TESTS=$(pwd)/tests
+
+# Activate conda environment
+eval "$(conda shell.bash hook)"
+conda activate hyuiv2
