config for pyright; added dash mew

--- a/.envrc
+++ b/.envrc
@@ -52,5 +52,6 @@ export DIR_SRC_UTILS=$(pwd)/src/utils
 export DIR_TESTS=$(pwd)/tests
 
 # Activate conda environment
+# as per https://linuxtut.com/en/909f9619bc8c4330d523/
 eval "$(conda shell.bash hook)"
 conda activate hyuiv2
