--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,5 @@
 {
 	// Install LSP-json to get validation and autocompletion in this file.
 	"venvPath": "/opt/homebrew/Caskroom/miniforge/base/envs",
-	"venv": "hyui",
+	"venv": "hyuiv2",
 }
