getting linting etc working

--- a/.envrc
+++ b/.envrc
@@ -51,6 +51,8 @@ export DIR_SRC_UTILS=$(pwd)/src/utils
 # Add environment variables for the `tests` directory
 export DIR_TESTS=$(pwd)/tests
 
+export DB_CONN=postgresql://localhost/hyui
+
 # Activate conda environment
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
 eval "$(conda shell.bash hook)"
