--- a/.gitignore
+++ b/.gitignore
@@ -884,3 +884,6 @@ docs/reference/api/*
 
 # Ignore Sphinx documentation link checking folder
 docs/_linkcheck/
+
+# Ignore sublime artifacts
+*.sublime-workspace
