--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ services:
       - ./src/api:/usr/src/app
     ports:
       - 8094:8000
+    expose:
+      - 8000
     environment:
       - http_proxy
       - https_proxy
       - HTTP_PROXY
       - HTTPS_PROXY
-      - PORT=8000
     env_file:
       - .env
       - .secrets
