--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - https_proxy
       - HTTP_PROXY
       - HTTPS_PROXY
+      - NO_PROXY=dash
+      - no_proxy=dash
     env_file:
       - .env
       - .secrets
@@ -54,6 +56,8 @@ services:
       - https_proxy
       - HTTP_PROXY
       - HTTPS_PROXY
+      - NO_PROXY=api
+      - no_proxy=api
     env_file:
       - .env
       - .secrets
