--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,13 +33,14 @@ repos:
       - id: black
         name: black - consistent Python code formatting (auto-fixes)
         language_version: python # Should be a command that runs python3.6+
+        # additional_dependencies: ['click==8.0.4']
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
       - id: flake8
         name: flake8 - Python linting
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 0.12.0
+    rev: 1.3.1
     hooks:
       - id: nbqa-isort
         name: nbqa-isort - Sort Python imports (notebooks; auto-fixes)
@@ -48,7 +49,7 @@ repos:
       - id: nbqa-black
         name: nbqa-black - consistent Python code formatting (notebooks; auto-fixes)
         args: [ --nbqa-mutate ]
-        additional_dependencies: [ black==21.5b2 ]
+        additional_dependencies: [ black==22.3.0 ]
       # TODO: Disabled for now until it's clear how to add noqa to specific cells of a Jupyter notebook
       #- id: nbqa-flake8
       #  name: nbqa-flake8 - Python linting (notebooks)
