--- a/try/synth_v1/Makefile
+++ b/try/synth_v1/Makefile
@@ -1,14 +1,19 @@
 # Default set up for working with docker on the GAE
+# Load the user and group ids to avoid permissions trouble
 NB_UID := $(shell id -u)
 NB_GID := $(shell id -g)
 
 export NB_UID
 export NB_GID
 
+# Load secrets so available to docker
+# Specifically the UDS credentials
+include .secrets
+
 .PHONY:
 	build
 
-## build docker image
+## build docker image (uses Dockerfile)
 build: 
 	docker build \
 		--build-arg HTTP_PROXY \
@@ -17,9 +22,11 @@ build:
 		--build-arg https_proxy \
 		-t jupyter-hyui .
 
-# run docker image
+## run docker image
 run:
+	@echo "*** JupyterLab will run on port 8091"
 	docker run -it --rm \
+		--detach \
 		-p 8091:8888 \
 		--user root \
 		-e NB_USER=steve \
@@ -27,7 +34,15 @@ run:
 		-e NB_GID="${NB_GID}"  \
 		-e CHOWN_HOME=yes \
 		-e CHOWN_HOME_OPTS="-R" \
+		-e UDS_USER \
+		-e UDS_PWD \
+		-e UDS_HOST \
 		-w "/home/${NB_USER}" \
 		-v ${PWD}/work:/home/steve/work \
 		jupyter-hyui:latest \
 		start.sh jupyter lab --LabApp.token=''
+
+## stop that docker image
+stop:
+	@echo "*** Stopping all docker containers derived from jupyter-hyui"
+	docker ps --filter ancestor=jupyter-hyui -aq | xargs docker stop
