--- a/dev/steve/environment-short.yml
+++ b/dev/steve/environment-short.yml
@@ -28,4 +28,5 @@ dependencies:
   - sdv # this is massive! has a tonne of dependencies
   - jupyter
   - jupyterlab
+  - pytables
 prefix: /opt/homebrew/Caskroom/miniforge/base/envs/hyuiv4
