--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ profile = "black"
 # `pytest` configurations
 [tool.pytest.ini_options]
 pythonpath = [
-    "src"
+    "./src",
+    # direct paths added since docker files start from these dirs
+    "./src/api",
+    "./src/dash",
 ]
 addopts = [
     "-vv",
