pydantic settings management

--- a/.envrc
+++ b/.envrc
@@ -30,6 +30,7 @@ export DIR_DATA_EXTERNAL=$(pwd)/data/external
 export DIR_DATA_RAW=$(pwd)/data/raw
 export DIR_DATA_INTERIM=$(pwd)/data/interim
 export DIR_DATA_PROCESSED=$(pwd)/data/processed
+export DIR_DATA_MOCK=$(pwd)/data/mock
 
 # Add environment variables for the `docs` directory
 export DIR_DOCS=$(pwd)/docs
@@ -51,9 +52,22 @@ export DIR_SRC_UTILS=$(pwd)/src/utils
 # Add environment variables for the `tests` directory
 export DIR_TESTS=$(pwd)/tests
 
-export DB_CONN=postgresql://localhost/hyui
+# ===================================================================== #
+# GOV.UK cookiecutter above / local edits and notes below
+# ===================================================================== #
+
+# SET THE ENVIRONMENT 
+# e.g. export ENV=dev 
+# but do this in .secrets to it's machine specific
+
+# DATABASE for local development
+# https://docs.sqlalchemy.org/en/14/dialects/sqlite.html#uri-connections
+# NB: url appended `?mode=ro&uri=true` to ensure readonly etc.
+export DB_URL="sqlite:///${PWD}/data/mock/sample.db?mode=ro&uri=true"
+
 
 # Activate conda environment
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
 eval "$(conda shell.bash hook)"
 conda activate hyuiv4
+
