--- a/src/Dockerfile.api
+++ b/src/Dockerfile.api
@@ -18,8 +18,8 @@ RUN pip install --upgrade pip
 COPY ./api/requirements.txt .
 RUN pip install -r requirements.txt
 
-EXPOSE 8000
-# load environment variables into docker image
+# loading environment variables into docker image
+# is managed at the docker-compose level 
 
 # add app from local api directory to WORKDIR (above)
 COPY api .
