--- a/src/Dockerfile.dash
+++ b/src/Dockerfile.dash
@@ -18,7 +18,8 @@ RUN pip install --upgrade pip
 COPY ./dash/requirements.txt .
 RUN pip install -r requirements.txt
 
-# load environment variables into docker image
+# loading environment variables into docker image
+# is managed at the docker-compose level 
 
 # add app from local dash directory to WORKDIR (above)
 COPY dash .
