it works! docker and local!

--- a/.envrc
+++ b/.envrc
@@ -63,7 +63,8 @@ export DIR_TESTS=$(pwd)/tests
 # DATABASE for local development
 # https://docs.sqlalchemy.org/en/14/dialects/sqlite.html#uri-connections
 # NB: url appended `?mode=ro&uri=true` to ensure readonly etc.
-export DB_URL="sqlite:///${PWD}/data/mock/sample.db?mode=ro&uri=true"
+# export DB_URL="sqlite:///${PWD}/data/mock/sample.db?mode=ro&uri=true"
+export DB_URL="sqlite:///mock/sample.db"
 
 
 # Activate conda environment
