re-organised structure

--- a/.envrc
+++ b/.envrc
@@ -25,12 +25,12 @@ export PYTHONPATH="$PYTHONPATH:$(pwd)"
 source_env ".secrets"
 
 # Add environment variables for the `data` directories
-export DIR_DATA=$(pwd)/data
-export DIR_DATA_EXTERNAL=$(pwd)/data/external
-export DIR_DATA_RAW=$(pwd)/data/raw
-export DIR_DATA_INTERIM=$(pwd)/data/interim
-export DIR_DATA_PROCESSED=$(pwd)/data/processed
-export DIR_DATA_MOCK=$(pwd)/data/mock
+export DIR_DATA=$(pwd)/src/data
+export DIR_DATA_EXTERNAL=$(pwd)/src/data/external
+export DIR_DATA_RAW=$(pwd)/src/data/raw
+export DIR_DATA_INTERIM=$(pwd)/src/data/interim
+export DIR_DATA_PROCESSED=$(pwd)/src/data/processed
+export DIR_DATA_MOCK=$(pwd)/src/data/mock
 
 # Add environment variables for the `docs` directory
 export DIR_DOCS=$(pwd)/docs
@@ -39,7 +39,7 @@ export DIR_DOCS=$(pwd)/docs
 export DIR_NOTEBOOKS=$(pwd)/notebooks
 
 # Add environment variables for the `outputs` directory
-export DIR_OUTPUTS=$(pwd)/outputs
+export DIR_OUTPUTS=$(pwd)/src/outputs
 
 # Add environment variables for the `src` directories
 export DIR_SRC=$(pwd)/src
@@ -48,6 +48,9 @@ export DIR_SRC_MAKE_FEATURES=$(pwd)/src/make_features
 export DIR_SRC_MAKE_MODELS=$(pwd)/src/make_models
 export DIR_SRC_MAKE_VISUALISATIONS=$(pwd)/src/make_visualisations
 export DIR_SRC_UTILS=$(pwd)/src/utils
+export DIR_SRC_CONFIG=$(pwd)/src/config
+export DIR_SRC_API=$(pwd)/src/api
+export DIR_SRC_DASH=$(pwd)/src/dash
 
 # Add environment variables for the `tests` directory
 export DIR_TESTS=$(pwd)/tests
@@ -59,12 +62,6 @@ export DIR_TESTS=$(pwd)/tests
 # SET THE ENVIRONMENT 
 # e.g. export ENV=dev 
 # but do this in .secrets to it's machine specific
-
-# DATABASE for local development
-# https://docs.sqlalchemy.org/en/14/dialects/sqlite.html#uri-connections
-# NB: url appended `?mode=ro&uri=true` to ensure readonly etc.
-# export DB_URL="sqlite:///${PWD}/data/mock/sample.db?mode=ro&uri=true"
-export DB_URL="sqlite:///mock/sample.db"
 
 
 # Activate conda environment
