development within a conda env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - HTTPS_PROXY
       - NO_PROXY=api
       - no_proxy=api
+      - DOCKERNETWORK=1
     env_file:
       - .env
       - .secrets
