--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,6 @@ doctest_optionflags = "NORMALIZE_WHITESPACE"
 testpaths = [
     "./tests"
 ]
+markers = [
+    "smoke: smoke tests to define basic functionality"
+]
