--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ profile = "black"
 pythonpath = [
     "./src",
     # direct paths added since docker files start from these dirs
-    "./src/api",
-    "./src/dash",
+    # "./src/api",
+    # "./src/dash",
 ]
 addopts = [
     "-vv",
