added src to PYTHONPATH

--- a/.envrc
+++ b/.envrc
@@ -59,13 +59,14 @@ export DIR_TESTS=$(pwd)/tests
 # GOV.UK cookiecutter above / local edits and notes below
 # ===================================================================== #
 
-# SET THE ENVIRONMENT 
-# e.g. export ENV=dev 
+# SET THE ENVIRONMENT
+# e.g. export ENV=dev
 # but do this in .secrets to it's machine specific
 
+# PYTHON modules are assumed to run from ./src
+export PYTHONPATH="${PYTHONPATH}:src"
 
 # Activate conda environment
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
 eval "$(conda shell.bash hook)"
 conda activate hyuiv4
-
