docker-compose api works

--- a/.envrc
+++ b/.envrc
@@ -18,8 +18,6 @@
 # committed
 sed -n 's/^export \(.*\)$/\1/p' .envrc .secrets | sed -e 's?$(pwd)?'"$(pwd)"'?g' | sed -e 's?$\([a-zA-Z0-9_]\{1,\}\)?${\1}?g' > .env
 
-# Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
-export PYTHONPATH="$PYTHONPATH:$(pwd)"
 
 # Import secrets from an untracked file `.secrets`
 source_env ".secrets"
@@ -63,6 +61,8 @@ export DIR_TESTS=$(pwd)/tests
 # e.g. export ENV=dev
 # but do this in .secrets to it's machine specific
 
+# Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
+# export PYTHONPATH="${PYTHONPATH}:${PWD}"
 # PYTHON modules are assumed to run from ./src
 export PYTHONPATH="${PYTHONPATH}:src"
 
