--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,11 @@ services:
     volumes:
       - ./src/api:/usr/src/api
       - ./src/config:/usr/src/config
-      - ./src/data:/usr/src/data
+      - ./src/mock:/usr/src/mock
     ports:
-      - 8094:8000
+      - "8094:8000"
+    expose:
+      - "8000"
     environment:
       - http_proxy
       - https_proxy
@@ -50,7 +52,7 @@ services:
     volumes:
       - ./src/app:/usr/src/app
       - ./src/config:/usr/src/config
-      - ./src/data:/usr/src/data
+      - ./src/data:/usr/src/mock
     ports:
       - 8095:8050
     environment:
