--- a/src/Dockerfile.api
+++ b/src/Dockerfile.api
@@ -9,9 +9,9 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install system dependencies
-RUN apt-get update \
-  && apt-get -y install netcat gcc postgresql \
-  && apt-get clean
+RUN apt-get update
+RUN apt-get -y --fix-missing install netcat gcc postgresql
+RUN apt-get clean
 
 # install python dependencies
 RUN pip install --upgrade pip
