update mypy config

--- a/mypy.ini
+++ b/mypy.ini
@@ -18,5 +18,14 @@ warn_return_any = False
 [mypy-somelibrary]
 ignore_missing_imports = True
 
+[mypy-dash.*]
+ignore_missing_imports = True
+
+[mypy-plotly.*]
+ignore_missing_imports = True
+
+[mypy-config.*]
+ignore_missing_imports = True
+
 [mypy-sqlalchemy]
 # ignore_missing_imports = True
