--- a/mypy.ini
+++ b/mypy.ini
@@ -24,8 +24,14 @@ ignore_missing_imports = True
 [mypy-plotly.*]
 ignore_missing_imports = True
 
+[mypy-api.*]
+ignore_missing_imports = True
+
+[mypy-app.*]
+ignore_missing_imports = True
+
 [mypy-config.*]
 ignore_missing_imports = True
 
-[mypy-sqlalchemy]
-# ignore_missing_imports = True
+[mypy-mock.*]
+ignore_missing_imports = True
