--- a/.envrc
+++ b/.envrc
@@ -23,12 +23,7 @@ sed -n 's/^export \(.*\)$/\1/p' .envrc .secrets | sed -e 's?$(pwd)?'"$(pwd)"'?g'
 source_env ".secrets"
 
 # Add environment variables for the `data` directories
-export DIR_DATA=$(pwd)/src/data
-export DIR_DATA_EXTERNAL=$(pwd)/src/data/external
-export DIR_DATA_RAW=$(pwd)/src/data/raw
-export DIR_DATA_INTERIM=$(pwd)/src/data/interim
-export DIR_DATA_PROCESSED=$(pwd)/src/data/processed
-export DIR_DATA_MOCK=$(pwd)/src/data/mock
+# export DIR_DATA=$(pwd)/src/data
 
 # Add environment variables for the `docs` directory
 export DIR_DOCS=$(pwd)/docs
@@ -41,14 +36,11 @@ export DIR_OUTPUTS=$(pwd)/src/outputs
 
 # Add environment variables for the `src` directories
 export DIR_SRC=$(pwd)/src
-export DIR_SRC_MAKE_DATA=$(pwd)/src/make_data
-export DIR_SRC_MAKE_FEATURES=$(pwd)/src/make_features
-export DIR_SRC_MAKE_MODELS=$(pwd)/src/make_models
-export DIR_SRC_MAKE_VISUALISATIONS=$(pwd)/src/make_visualisations
 export DIR_SRC_UTILS=$(pwd)/src/utils
 export DIR_SRC_CONFIG=$(pwd)/src/config
 export DIR_SRC_API=$(pwd)/src/api
-export DIR_SRC_DASH=$(pwd)/src/dash
+export DIR_SRC_APP=$(pwd)/src/app
+export DIR_SRC_MOCK=$(pwd)/src/mock
 
 # Add environment variables for the `tests` directory
 export DIR_TESTS=$(pwd)/tests
@@ -65,6 +57,8 @@ export DIR_TESTS=$(pwd)/tests
 # export PYTHONPATH="${PYTHONPATH}:${PWD}"
 # PYTHON modules are assumed to run from ./src
 export PYTHONPATH="${PYTHONPATH}:src"
+export PYTHONDONTWRITEBYTECODE=1
+export PYTHONUNBUFFERED=1
 
 # Activate conda environment
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
