--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,5 +1,8 @@
-fastapi
-sqlmodel
-uvicorn
-psycopg2-binary
-arrow
+fastapi==0.78.0
+sqlmodel==0.0.6
+uvicorn==0.17.6
+psycopg2-binary==2.9.3
+arrow==1.2.2
+requests==2.27.1
+pandas==1.1.4
+numpy==1.22.4
