--- a/src/apps/requirements.txt
+++ b/src/apps/requirements.txt
@@ -1,8 +1,8 @@
-sqlmodel
-arrow
-requests
-plotly
-dash
-dash_bootstrap_components
-pandas
-numpy
+sqlmodel==0.0.6
+arrow==1.2.2
+requests==2.27.1
+plotly==5.8.0
+dash==2.4.1
+dash_bootstrap_components==1.1.0
+pandas==1.1.4
+numpy==1.22.4
