--- a/src/apps/requirements.txt
+++ b/src/apps/requirements.txt
@@ -4,5 +4,5 @@ requests==2.27.1
 plotly==5.8.0
 dash==2.4.1
 dash_bootstrap_components==1.1.0
-pandas==1.1.4
-numpy==1.22.4
+pandas>=1.1.4
+numpy>=1.22.4
