--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,5 @@
 {
-	// Install LSP-json to get validation and autocompletion in this file.
+	// Install LSP-json to get validation and autocompletion in this file. # noqa
 	"venvPath": "/opt/homebrew/Caskroom/miniforge/base/envs",
-	"venv": "hyuiv4",
+	"venv": "hyuiv4"
 }
