--- a/mypy.ini
+++ b/mypy.ini
@@ -19,19 +19,25 @@ warn_return_any = False
 ignore_missing_imports = True
 
 [mypy-dash.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
+
+[mypy-dash_bootstrap_components.*]
+ignore_missing_imports = True
 
 [mypy-plotly.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
 
 [mypy-api.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
 
 [mypy-app.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
 
 [mypy-config.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
 
 [mypy-mock.*]
-# ignore_missing_imports = True
+ignore_missing_imports = True
+
+[mypy-utils.*]
+ignore_missing_imports = True
