pip install added to github actions; split jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This is the lint_etc job
+  lint_etc:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.10.4]
+        python-version: [3.9.9]
 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -36,8 +36,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#          if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
 
       # Lint the files
       - name: Lint with flake8
@@ -47,11 +45,31 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+  test_api:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        python-version: [3.9.9]
+
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          pip install --no-cache -r src/api/requirements.txt
+
       # Pytest
-      # TODO: split this out into unit tests and functional tests?
       - name: Run pytest
         run: |
           python -m pytest -m smoke
           python -m pytest tests/mock
           python -m pytest tests/api
-          python -m pytest tests/apps
