skips tests conditional on github actions env var

--- a/.envrc
+++ b/.envrc
@@ -64,3 +64,8 @@ export PYTHONUNBUFFERED=1
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
 eval "$(conda shell.bash hook)"
 conda activate hyuiv4
+
+# Set GITHUB_ACTIONS to True via the ./.github/workflows/main.yml config
+# then use pytest.skipif to block tests that will necessarily fail on github
+# e.g. where .secrets are involved
+export GITHUB_ACTIONS=False
