--- a/dev/steve/environment-short.yml
+++ b/dev/steve/environment-short.yml
@@ -4,37 +4,37 @@ name: hyuiv4
 channels:
   - conda-forge
 dependencies:
-  - python=3.9.9
-  - python-lsp-server[all]=1.4.1
-  - python-lsp-black=1.2.1
+  - arrow=1.2.2
+  - coverage
+  - dash-bootstrap-components
+  - dash=2.4.1
+  - fastapi=0.78.0
+  - flake8
+  - gunicorn
+  - jupyter
+  - jupyterlab=3.4.3
+  - myst-parser
+  - nbqa
+  - numpy>=1.22.4
+  - pandas-stubs>=1.2
+  - pandas>=1.1.4
+  - pip=22.1.2
+  - plotly=5.8.0
+  - pre-commit
+  - psycopg2-binary=2.9.3
   - pyls-isort=0.2.2
   - pylsp-mypy=0.5.7
-  - nbqa
-  - flake8
-  - requests
-  - plotly
-  - dash
-  - dash-bootstrap-components
-  - pandas
-  - pandas-stubs
-  - numpy
-  - fastapi
-  - sqlmodel
-  - uvicorn
-  - psycopg2-binary
-  - arrow
-  - coverage
-  - myst-parser
-  - pre-commit
-  - pytest
-  - Sphinx
-  - toml
-  - sdv # this is massive! has a tonne of dependencies
-  - jupyter
-  - jupyterlab
   - pytables
-  # - microsoft::playwright # not available for macm1
-  - pip
+  - pytest
+  - python-lsp-black=1.2.1
+  - python-lsp-server[all]=1.4.1
+  - python=3.9.9
+  - requests=2.27.1
+  - sdv # this is massive! has a tonne of dependencies
+  - Sphinx
+  - sqlmodel=0.0.6
+  - toml
+  - uvicorn=0.17.6
   - pip:
-      - playwright
+      - playwright # microsoft::playwright # not available for macm1
 prefix: /opt/homebrew/Caskroom/miniforge/base/envs/hyuiv4
