--- a/src/Dockerfile.api
+++ b/src/Dockerfile.api
@@ -1,5 +1,35 @@
-# pull official base image
-FROM python:3.9.9-slim-bullseye
+# via https://luis-sena.medium.com/creating-the-perfect-python-dockerfile-51bdec41f1c8
+# using ubuntu LTS version
+FROM ubuntu:20.04 AS builder-image
+ARG DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update && \
+    apt-get install --no-install-recommends -y \
+        python3.9 \
+        python3.9-dev \
+        python3.9-venv \
+        python3-pip \
+        python3-wheel \
+        netcat \
+        libpq-dev \
+        gcc \
+        postgresql \
+        build-essential && \
+   apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# create and activate virtual environment
+RUN python3.9 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# install requirements
+COPY ./api/requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+FROM ubuntu:20.04 AS runner-image
+RUN apt-get update && apt-get install --no-install-recommends -y python3.9 python3-venv && \
+   apt-get clean && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder-image /opt/venv /opt/venv
 
 # set working directory
 WORKDIR /usr/src
@@ -8,26 +38,8 @@ WORKDIR /usr/src
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# install system dependencies
-RUN apt-get update
-RUN apt-get -y --fix-missing install netcat gcc postgresql
-RUN apt-get clean
+# activate virtual environment
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
-# install python dependencies
-RUN pip install --upgrade pip
-COPY ./api/requirements.txt .
-RUN pip install --no-cache -r requirements.txt
-
-# loading environment variables into docker image
-# is managed at the docker-compose level
-
-# add app from local api directory to WORKDIR (above)
-
-
-# COPYING means directories are created at build time
-# UNCOMMENT if you want a standalone dockerfile
-# COPY api api
-
-# BUT the PREFERRED default is to add as mount volumes via docker-compose
-# AND THEN run using docker-compose
-# docker-compose up --build api
+CMD ["python"]
