--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ addopts = [
 ]
 doctest_optionflags = "NORMALIZE_WHITESPACE"
 testpaths = [
-    "./tests"
+    "./src/tests"
 ]
 markers = [
     "smoke: smoke tests to define basic functionality"
