--- a/src/Dockerfile.api
+++ b/src/Dockerfile.api
@@ -1,4 +1,4 @@
-# via https://luis-sena.medium.com/creating-the-perfect-python-dockerfile-51bdec41f1c8
+# https://luis-sena.medium.com/creating-the-perfect-python-dockerfile-51bdec41f1c8
 # using ubuntu LTS version
 FROM ubuntu:20.04 AS builder-image
 ARG DEBIAN_FRONTEND=noninteractive
@@ -18,28 +18,44 @@ RUN apt-get update && \
    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # create and activate virtual environment
-RUN python3.9 -m venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
+# using final folder name to avoid path issues with packages
+RUN python3.9 -m venv /home/hyui/venv
+ENV PATH="/home/hyui/venv/bin:$PATH"
 
-# install requirements
+# install shared requirements
+COPY ./requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# install requirements for API
 COPY ./api/requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 FROM ubuntu:20.04 AS runner-image
 RUN apt-get update && apt-get install --no-install-recommends -y python3.9 python3-venv && \
-   apt-get clean && rm -rf /var/lib/apt/lists/*
+  apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder-image /opt/venv /opt/venv
+RUN useradd --create-home hyui
+COPY --from=builder-image /home/hyui/venv /home/hyui/venv
 
-# set working directory
-WORKDIR /usr/src
+USER hyui
+WORKDIR /home/hyui
+# add local dash directory to WORKDIR (above)
+# COPYING means directories are created at build time
+# UNCOMMENT if you want a standalone dockerfile
+# COPY . .
 
-# set environment variables
+# BUT the PREFERRED default is to add as mount volumes via docker-compose
+# AND THEN run using docker-compose
+# docker-compose up --build api
+
+EXPOSE 8094
+
+# make sure all messages always reach console
+ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
 
 # activate virtual environment
-ENV VIRTUAL_ENV=/opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
+ENV VIRTUAL_ENV=/home/hyui/venv
+ENV PATH="/home/hyui/venv/bin:$PATH"
 
 CMD ["python"]
